--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <p>Click below to run each project:</p>
   <ul>
     <li><a href="Front End Projects/Booksy/index.html" target="_blank">Booksy</a></li>
-    <li><a href="Front End Projects/Guss the Number game/guessTheNumber.html" target="_blank">Guess the Number Game</a></li>
-    <li><a href="Front End Projects/ToDo List/todo.html" target="_blank">ToDo List</a></li>
+    <li><a href="Front End Projects/Guss the Number game/index.html" target="_blank">Guess the Number Game</a></li>
+    <li><a href="Front End Projects/ToDo List/index.html" target="_blank">ToDo List</a></li>
   </ul>
 </body>
+
 </html>
